--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     
-    <script src="operators.js"></script>
+    <script src="JS_ADVANCE/StringMethods.js"></script>
 </body>
 </html>
